--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
         </ul>
         <button id="resetBtn">Reset</button>
     </div>
-    <script src="./scirpt.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
