--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event Finder</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="styles.css">
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <!-- <link rel="stylesheet" href="styles.css"> -->
 </head>
 <body>
     <button id="openModalBtn">Open Modal</button>
@@ -29,15 +29,7 @@
         </ul>
         <button id="resetBtn">Reset</button>
     </div>
-    <script src="./script.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
-</html>
-        <h1>Main Webpage</h1>
-        <ul id="selectedEvents">
-            <!-- Selected events will be displayed here -->
-        </ul>
-        <button id="resetBtn">Reset</button>
-    </div>
-    <script src="./script.js"></script>
-</body>
+
 </html>
