--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Event Finder</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
-    <!-- <link rel="stylesheet" href="styles.css"> -->
 </head>
 <body>
 <!-- Modal toggle -->
@@ -32,27 +31,33 @@
               </div>
               <!-- Modal body -->
               <div class="p-4 md:p-5">
-                  <form id="eventForm" class="space-y-4" action="#">
-                      <div>
-                          <label for="location" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Location of Festival:</label>
-                          <input type="text" name="location" id="location" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" placeholder="Enter the city and state.." required />
-                      </div>
-                      <div>
-                          <label for="date" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Date</label>
-                          <input type="date" name="date" id="date" placeholder="Enter a date.." class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" required />
-                      </div>
-                      <div class="flex justify-between">
-                          <div class="flex items-start">
-                              <div class="flex items-center h-5"></div>
-                          </div>
-                      </div>
-                      <button data-modal-hide="tracker-modal" type="submit" class="w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Find Events</button>
-                      </div>
-                  </form>
-              </div>
-          </div>
-      </div>
-  </div> 
+                <form id="eventForm" class="space-y-4" action="#">
+                  <div class="grid gap-4 mb-4 grid-cols-2">
+                    <div class="col-span-2 sm:col-span-1">
+                        <label for="location" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">City:</label>
+                        <input type="text" name="location" id="location" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" placeholder="Enter the city.." required />
+                    </div>
+                    <div class="col-span-2 sm:col-span-1">
+                      <label for="state" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">State:</label>
+                      <input type="text" name="state" id="state" placeholder="Enter State Code (ex: TX)" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" placeholder="Enter the state.." required />
+                    </div>
+                  </div>
+                    <div>
+                        <label for="date" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Date</label>
+                        <input type="date" name="date" id="date" placeholder="Enter a date.." class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" required />
+                    </div>
+                    <div class="flex justify-between">
+                        <div class="flex items-start">
+                            <div class="flex items-center h-5"></div>
+                        </div>
+                    </div>
+                    <button data-modal-hide="tracker-modal" type="submit" class="w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Find Events</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
     <div id="mainPage">
         <h1>Main Webpage</h1>
         <ul id="selectedEvents">
