added functional footer added second html file and js pin drop marker

--- a/index.html
+++ b/index.html
@@ -121,6 +121,28 @@
     </div>
     <script src="./assets/js/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
+    <footer class="bg-black shadow border-t-2">
+        <a href="./index.html" class="">
+            <img class="block lg:hidden h-28 w-auto mx-auto" src="./assets/images/MT1.png" alt="Music Tracker Compass Logo">
+            <img class="hidden lg:block h-28 w-auto mx-auto" src="./assets/images/MT1.png" alt="Music Tracker Compass Logo">
+        </a>
+        <div class="flex">
+            <div class="text-white text-center container mx-auto outline-dotted outline-1">
+                <p class="font-bold text-xl mt-2">About Us</p> <br>
+                <p class="p-2">Music Tracker, we understand the thrill of live music, the allure of a diverse crowd, and the magic of unforgettable performances. That's why we've created a platform dedicated to helping you find the hottest festivals around the globe. For more info <a href="./assets/html/aboutus.html">CLICK HERE</a></p>
+            </div>
+            <div class="text-white text-center container mx-auto outline-dotted outline-1">
+                <p class="font-bold text-xl mt-2">Contact Us</p> <br>
+                <p class="mb-4">
+                    <a href="mailto:isaak@marrerosite.com">isaak@marrerosite.com</a><br>
+                    <a href="mailto:t.23carocci@yahoo.com">t.23carocci@yahoo.com</a><br>
+                    <a href="mailto:ajgarza27@gmail.com">ajgarza27@gmail.com</a><br>
+                    <a href="mailto:sweme1@gmail.com">sweme2@gmail.com</a><br>
+                    <a href="mailto:frank.vasquez.school@gmail.com">frank.vasquez.school@gmail.com</a><br>
+                </p>
+            </div>
+        </div>
+        </div>
+    </footer>
 </body>
-
 </html>
