Updated the README and tweaked the HTML

--- a/aboutus.html
+++ b/aboutus.html
@@ -13,7 +13,7 @@
     <div class="fixed-bg bg-cover" style="background-image: url('./assets/images/festiepic.png')"></div>
         
     <div class="overflow-auto">
-    <nav class="bg-black shadow-md shadow-zinc-300">
+    <nav class="bg-black shadow-md fixed shadow-zinc-300">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16">
                 <div class="flex items-center">
@@ -52,7 +52,7 @@
         <div class="flex">
             <div class="text-white text-center container mx-auto outline-dotted outline-1">
                 <p class="font-bold text-xl mt-2">About Us</p> <br>
-                <p class="p-2 text-xs sm:text-lg">Music Tracker, we understand the thrill of live music, the allure of a diverse crowd, and the magic of unforgettable performances. That's why we've created a platform dedicated to helping you find the hottest festivals around the globe. For more info <a href="./aboutus.html" class="hover:text-red-300">CLICK HERE</a></p>
+                <p class="p-2 text-xs sm:text-lg">Music Tracker, we understand the thrill of live music, the allure of a diverse crowd, and the magic of unforgettable performances. That's why we've created a platform dedicated to helping you find artists performing in any area. For more info <a href="./aboutus.html" class="hover:text-red-300">CLICK HERE</a></p>
             </div>
             <div class="text-white text-center container mx-auto outline-dotted outline-1">
                 <p class="font-bold text-xl mt-2">Contact Us</p> <br>
