--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
              <!-- Tracker header -->
                 <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t">
                     <h3 class="text-xl font-semibold text-white">
-                        Search with Festival Tracker!
+                        Search with Music Tracker!
                     </h3>
                     <button data-modal-hide="tracker-modal" type="button" class="end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center" data-modal-hide="authentication-modal">
                         <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
@@ -140,7 +140,7 @@
         <div class="flex">
             <div class="text-white text-center container mx-auto outline-dotted outline-1">
                 <p id="aboutUs" class="font-bold text-xl mt-2">About Us</p> <br>
-                <p class="p-2 text-xs sm:text-lg">At Music Tracker, we understand the thrill of live music, the allure of a diverse crowd, and the magic of unforgettable performances. That's why we've created a platform dedicated to helping you find the hottest festivals around the globe. For more info <a href="./aboutus.html" class="hover:text-red-300">CLICK HERE.</a></p>
+                <p class="p-2 text-xs sm:text-lg">At Music Tracker, we understand the thrill of live music, the allure of a diverse crowd, and the magic of unforgettable performances. That's why we've created a platform dedicated to helping you find artists performing in any area. For more info <a href="./aboutus.html" class="hover:text-red-300">CLICK HERE.</a></p>
             </div>
             <div class="text-white text-center container mx-auto outline-dotted outline-1">
                 <p id="contactUs" class="font-bold text-xl mt-2">Contact Us</p> <br>
