--- a/aboutus.html
+++ b/aboutus.html
@@ -13,7 +13,7 @@
     <div class="fixed-bg bg-cover" style="background-image: url('./assets/images/festiepic.png')"></div>
         
     <div class="overflow-auto">
-    <nav class="bg-black shadow-md fixed shadow-zinc-300">
+    <nav class="bg-black shadow-md shadow-zinc-300">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16">
                 <div class="flex items-center">
